--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     }
   },
   "dependencies": {
-    "vue": "^2.3.3"
+    "vue": "^2.3.3",
+    "vue-material": "^0.7.4",
+    "vue-router": "^2.7.0"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
