--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "axios": "^0.16.2",
     "vue": "^2.3.3",
     "vue-material": "^0.7.4",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
