--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "moment": "^2.18.1",
     "tough-cookie": "^2.3.2",
     "vue": "^2.3.3",
     "vue-material": "^0.7.4",
