--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "markdown": "^0.5.0",
     "moment": "^2.18.1",
     "tough-cookie": "^2.3.2",
     "vue": "^2.3.3",
+    "vue-markdown": "^2.2.2",
     "vue-material": "^0.7.4",
     "vue-router": "^2.7.0",
     "vuex": "^2.3.1"
