--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "treering-windows",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "author": "shangxinbo <314911714@qq.com>",
   "description": "An electron-vue project",
-  "license": null,
+  "license": "GPL-3.0",
   "main": "./dist/electron/main.js",
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
