--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,9 @@ matrix:
   include:
   - os: osx
   - os: linux
-
-install:
-#- export DISPLAY=':99.0'
-#- Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+before_install:
 - nvm install 8
-- npm install
 script:
-#- xvfb-maybe node_modules/.bin/karma start test/unit/karma.conf.js
-#- yarn run pack && xvfb-maybe node_modules/.bin/mocha test/e2e
 - npm run build
 branches:
   only:
