--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
 # Commented sections below can be used to run tests on the CI server
 # https://simulatedgreg.gitbooks.io/electron-vue/content/en/testing.html#on-the-subject-of-ci-testing
 language: node_js
+osx_image: xcode8.3
 node_js:
   - "8"
 matrix:
   include:
   - os: osx
   - os: linux
-deploy:
-  provider: releases
-  api_key:
-    secure: 366851632e1617ea0f8e3adda217729fc627bd60
 script:
 - npm run build
 branches:
