--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,8 @@ install:
 - yarn
 
 script:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then yarn release; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then yarn release -- --mac --win; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then yarn build; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then yarn build -- --mac --win; fi
 
 before_cache:
   - rm -rf $HOME/.cache/electron-builder/wine
