--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,13 @@ deploy:
   provider: releases
   api-key: "c589cebd96f6d4a6ed5c6fc350ffe59b78ddfda9"
   file_glob: true
-  file: "build/*.AppImage"
+  file: 
+    - "build/*.AppImage"
   skip_cleanup: true
   on:
-    tags: true
+    tags: false
+    all_branches: true
+
+branches:
+  except:
+    - "/^v\\d+\\.\\d+\\.\\d+$/"
