--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,9 @@ script:
 deploy:
   provider: releases
   api-key: "c589cebd96f6d4a6ed5c6fc350ffe59b78ddfda9"
-  file_glob: true
   file: 
     - "LICENSE"
-  skip_cleanup: false
+  skip_cleanup: true
   on:
     repo: shangxinbo/treering-windows
     tags: true
