--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,15 @@ node_js: "8"
 os:
   - linux
 
-script:
+before_deploy:
   - npm run build
 
 deploy:
   provider: releases
   api-key: "c589cebd96f6d4a6ed5c6fc350ffe59b78ddfda9"
+  file_glob: true
   file: 
-    - "LICENSE"
+    - "/build/*.*"
   skip_cleanup: true
   on:
-    repo: shangxinbo/treering-windows
     tags: true
