--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ deploy:
   api-key: "c589cebd96f6d4a6ed5c6fc350ffe59b78ddfda9"
   file_glob: true
   file: 
-    - "/build/*.*"
+    - "README.md"
   skip_cleanup: true
   on:
     tags: true
