--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ before_deploy:
 deploy:
   provider: releases
   api-key: "c589cebd96f6d4a6ed5c6fc350ffe59b78ddfda9"
-  file_glob: true
-  file: "README.md"
+  file: README.md
   skip_cleanup: true
   on:
     tags: true
