--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,3 @@
-version: 1.1.{build}
 
 image: Visual Studio 2017
 platform:
@@ -26,13 +25,10 @@ build_script:
 test: off
 
 deploy:
-  release: v$(appveyor_build_version)
   description: 'nna'
   provider: GitHub
   auth_token:
     secure: 3jvwJmTAi3etpC/GjN0Ox7gtuowbp1D213PRdqy2JoTOL/LdUeKTAFSWEWHtWrdy
-  artifact: README.md            # upload all NuGet packages to release assets
-  draft: false
-  prerelease: false
+  artifact: README.md 
   on:
-    appveyor_repo_tag: true        # deploy on tag push only
+    appveyor_repo_tag: true  
