--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,12 +25,12 @@ build_script:
 test: off
 
 artifacts:
-  - path: README.md
+  - path: build/*.exe
 
 deploy:
   provider: GitHub
   auth_token:
     secure: 3jvwJmTAi3etpC/GjN0Ox7gtuowbp1D213PRdqy2JoTOL/LdUeKTAFSWEWHtWrdy
-  artifact: /.*\.md/
+  artifact: /build\/.*\.exe/
   on:
     appveyor_repo_tag: true  
